<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:tools="http://schemas.android.com/tools"
xmlns:app="http://schemas.android.com/apk/res-auto"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:orientation="vertical"
android:layout_centerHorizontal="true"
android:gravity="center_horizontal"
android:layout_margin="20dp"
tools:context="com.example.nicol.pub.MainActivity">

<TextView
    android:id="@+id/wstep"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="10dp"
    android:text="@string/wiat_alkoholi"
    android:textSize="20sp"
    android:textColor="@color/colorAccent"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintLeft_toLeftOf="parent"
    app:layout_constraintRight_toRightOf="parent"
    app:layout_constraintTop_toTopOf="parent" />

<TextView
    android:id="@+id/opis"
    android:text="@string/ulalallalalalala_wybierz_co_chcesz_wypic_pararapappapapa"
    android:layout_width="match_parent"
    android:gravity="center"
    android:layout_marginTop="120dp"

    android:layout_height="wrap_content" />
<EditText
    android:id="@+id/edit"
    android:hint="@string/co_chcesz"
    android:gravity="center"
    android:layout_marginRight="20dp"
    android:layout_marginLeft="20dp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content" />
<Button
    android:id="@+id/btn_wybierzDrinka"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="150dp"
    android:background="@color/colorAccent"
    android:text="@string/lista_drinkow"
    android:textColor="@android:color/white"/>

</LinearLayout>