<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_margin="20dp">

    <TextView
        android:id="@+id/txt_drink"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cosmopolitan"
        android:textSize="25sp"
        android:layout_centerVertical="true"
        android:textStyle="bold"
        android:layout_toEndOf="@id/obraz"
        tools:ignore="HardcodedText" />

    <ImageView
        android:id="@+id/obraz"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_centerVertical="true"
        android:layout_margin="5dp"
        android:src="@drawable/ic_airplanemode_active_black_24dp"
        android:contentDescription="@string/todo"/>

    <TextView
        android:id="@+id/txt_cena"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_15_00_z"
        android:layout_marginEnd="10dp"
        android:textSize="14sp"
        android:layout_margin="5dp"
        android:layout_alignParentEnd="true"
        tools:ignore="RelativeOverlap" />

    <Button
        android:id="@+id/btn_wybierz"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/wybierz"
        android:background="@color/colorAccent"
        android:textColor="@android:color/white"
        android:layout_below="@id/txt_cena"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="10dp" />
</RelativeLayout>